--- a/headtool.html
+++ b/headtool.html
@@ -146,9 +146,14 @@
 		<td></td>
 		<td id=result></td>
 	</tr>				
+	<tr>
+		<td><button class=prime onclick='calc()'>CALCULATE</button></td>
+		<td></td>
+		<td><button class=prime id=accept onclick='accept()' style="display: none">ACCEPT</button></td>
+	</tr>				
 </table>		
-<button class=prime onclick='calc()'>CALCULATE</button>
-<button class=prime id=accept onclick='accept()' style="display: none">ACCEPT</button>
+
+
 		
 		
 	
@@ -172,7 +177,7 @@
 		return v*v/2/g;
 	}
 	function r(txt,v) {
-		$(`#results~ tr>td:contains(${txt})`).next().text(rnd(v));
+		$(`#results~ tr>td:contains(${txt})`).next().next().text(rnd(v));
 	}
 	function calc() {
         let flowU, distF, g;
