--- a/headtool.html
+++ b/headtool.html
@@ -26,7 +26,7 @@
 	#results td:first-child {
 		padding-right: 1rem;
 	}
-	#results~ tr:nth-child(n+2) {
+	#results~ tr:not(:last-child) {
 		background-color: #C3C8C8;
 	}
 	#result {
