--- a/headtool.html
+++ b/headtool.html
@@ -95,7 +95,7 @@
 			<input name=Zd><strong>Zd</strong>
 		</td>
 	</tr>
-	<tr id="sucTank">
+	<tr class="sucTank">
 		<td>
 			Tank gas overpressure
 		</td>
@@ -103,7 +103,7 @@
 			<input name=Pg_s>
 		</td>
 	</tr>
-	<tr id="sucTank">
+	<tr class="sucTank">
 		<td>
 			Tank fluid surface elevation
 		</td>
