--- a/headtool.html
+++ b/headtool.html
@@ -15,7 +15,7 @@
 		border-collapse: collapse;
 	}
 	table input {
-		margin-bottom: .75rem;
+		/*margin-bottom: .75rem;*/
 	}
 	th {
 		text-align: left;
@@ -57,6 +57,7 @@
 		<td>Flow</td>
 		<td id="flow"/></td>					
 	</tr>
+	<tr><td>&nbsp;</td></tr>
 	<tr>
 		<th></th>
 		<th>Suction</th>
