--- a/headtool.html
+++ b/headtool.html
@@ -95,7 +95,7 @@
 		<td>Gauge pressure</td>
 		<td>
 			<div class=sucGauge>
-				<input name=Ps <strong>Ps</strong>
+				<input name=Ps><strong>Ps</strong>
 			</div>									
 		</td>
 		<td>						
