--- a/headtool.html
+++ b/headtool.html
@@ -79,7 +79,7 @@
 			Tank gas overpressure
 		</td>
 		<td>
-			<input name=Pg_s>
+			<input name=Pg_s><strong>Pg</strong>
 		</td>
 	</tr>
 	<tr class="sucTank">
@@ -87,7 +87,7 @@
 			Tank fluid surface elevation
 		</td>
 		<td>
-			<input name=Ztnk_s>
+			<input name=Ztnk_s><strong>Zs</strong>
 		</td>
 	</tr>	
 	<tr>
@@ -125,13 +125,6 @@
 			<input name=Kd><strong>Kd</strong>
 		</td>
 	</tr>
-
-<!--<div id="sucTank" style="display: none">
-	Suction tank gas overpressure<br>
-	<input name=Pg_s><br>
-	Suction tank fluid surface elevation<br>
-	<input name=Ztnk_s><br>
-</div>-->
 	<tr><td>&nbsp;</td></tr>
 	<tr id=results>					
 		<th>Head</th>
