--- a/headtool.html
+++ b/headtool.html
@@ -254,8 +254,8 @@
 	$('#flow').html(Cond.flow);
 	$('#sg').text(Cond.specific_gravity);
 	$('input').change(function () {
-		$('#results td:nth-child(2):gt(0)').text('');
-		$('#accept').hide();
+		pg('#results ~ tr:not(:last-child) td:last-child').text('');
+		pg('#accept').hide();
 	});
 	setCtls(HeadTool);
 	suction();
