--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
       function parIdx(e,a=0) {
         return $(e).parent().index()+a;
       }
-      function pparIdx(e) {
-        return parIdx($(e).parent());
+      function pparIdx(e,a=0) {
+        return parIdx($(e).parent(),a);
       }
       function dom(e) {
         return $(e)[0];
