--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
           });        
           saveProp('units',IMP);
           saveProp('conditions',[]);
-          saveHd({Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1});          
+          saveHd({Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1});  
+          saveProp('curve',["","","",""]);        
         }
         Conds = loadProp('conditions');
         Units = loadProp('units');
