--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
         Conds = loadProp('conditions');
         Units = loadProp('units');
         HeadTool = loadProp('headTool');
+        Curve = loadProp('curve'); 
         return (DefCond = loadProp('defCond'));
       }
       Dlg=require('electron').remote.dialog;
