--- a/conditions.html
+++ b/conditions.html
@@ -245,6 +245,9 @@
 						});
 					});
 					saveConds();
+					saveProp('units',Units);          
+          			saveHd(HeadTool);  
+          			saveProp('curve',Curve);        
 					main();	
 				}
 			}
