--- a/curve.html
+++ b/curve.html
@@ -169,7 +169,7 @@
 	}
 	showUnit('Flow',FLOW);
 	showUnit('Head',DIST);
-	Curve.forEach((v,i)=>pg('input').eq(i).val(v));
+	Curve.forEach((v,i)=>pg('input').eq(i).val(rnd(v)));
 	inpChg();
 </script>
 
