--- a/conditions.html
+++ b/conditions.html
@@ -192,12 +192,15 @@
 			chg(DIST,d,'head');
 		});
 		saveProp('defCond',DefCond);
+		saveConds();
 		chg(DIST,HeadTool,['Ds','Dd','Zs','Ztnk_s','Zd']);		
 		chg(PRESSURE,HeadTool,['Ps','Pg_s','Pd']);		
 		saveHd();
+		chg(FLOW, Curve, ['0','2']);
+		chg(DIST, Curve, ['1','3']);
+		saveProp('curve',Curve);
 		Units = nunits;
 		saveProp('units',Units);
-		saveConds();
 	}
 	function shade(n) {
 		$('td').removeClass('shade');
