--- a/conditions.html
+++ b/conditions.html
@@ -196,8 +196,8 @@
 		chg(DIST,HeadTool,['Ds','Dd','Zs','Ztnk_s','Zd']);		
 		chg(PRESSURE,HeadTool,['Ps','Pg_s','Pd']);		
 		saveHd();
-		chg(FLOW, Curve, ['0','2']);
-		chg(DIST, Curve, ['1','3']);
+		chg(FLOW, Curve, [0,2]);
+		chg(DIST, Curve, [1,3]);
 		saveProp('curve',Curve);
 		Units = nunits;
 		saveProp('units',Units);
