--- a/curve.html
+++ b/curve.html
@@ -74,9 +74,6 @@
 	function showHdBtn(show) {
 		pg('button')[show]();
 	}
-	function fh(n) {
-		return pg('#points input').eq(n).val();
-	}
 	function steps(v1,v2) {
 		const 	max = Math.max(v1,v2),
 				m10 = Math.pow(10, Math.floor(Math.log10(max / 15))),
@@ -84,10 +81,10 @@
 		return [max, step, Math.ceil(max / step)];
 	}
 	function plot() {
-		const 	f1 = fh(0),
-				h1 = fh(1),				
-				f2 = fh(2),
-				h2 = fh(3),  
+		const 	f1 = Curve[0],
+				h1 = Curve[1],				
+				f2 = Curve[2],
+				h2 = Curve[3],  
 				hS = h1-(Math.pow(f1,1.9) * (h2-h1) / (Math.pow(f2,1.9) - Math.pow(f1,1.9))),
 				k = (h2-h1)/(Math.pow(f2,1.9)-Math.pow(f1,1.9)),
 				[xMax, xStep, xCnt] = steps(f1,f2),
