--- a/grid.html
+++ b/grid.html
@@ -379,8 +379,10 @@
       if (i==0) {
         newEl.find('span').text(c.name);     
       } else {              
-        setCtls(c,newEl); 
-        newEl.data('rowNm',$(e).children().first().children().first().contents().first().text().trim());
+        setCtls(c,newEl); //debugger;
+        //newEl.data('rowNm',$(e).children().first().children().first().contents().first().text().trim());
+        newEl.data('rowNm',$(e).children(':first').text().replace(/\(.*\)/,'').trim());
+        //console.log($(e).children(':first').text().replace(/\(.*\)/,'').trim());
       }
     });    
   });         
