--- a/grid.html
+++ b/grid.html
@@ -89,7 +89,7 @@
   <tr>
     <td class='th'>Motor</td><td/>
   </tr>
-    <td><div>Line freq <em>(Hz)</em></div></td>
+    <td><div>Line Freq <em>(Hz)</em></div></td>
     <td> 
       <select name='line'>
         <option>50</option>
@@ -128,7 +128,7 @@
     <td><input name='motor_rated_flc'> <button onclick='estFLA(this)'>EST</button></td>
   </tr>
   <tr>
-    <td><div>Size margin <em>(%)</em></div></td>
+    <td><div>Size Margin <em>(%)</em></div></td>
     <td><input name='margin'></td>
   </tr>
   <tr>
@@ -213,20 +213,20 @@
     <td><div>Motor Power</div></td><td></td>
   </tr>
   <tr>
-    <td><div>Annual energy <em>(MWh)</em></div></td><td></td>
+    <td><div>Annual Energy <em>(MWh)</em></div></td><td></td>
   </tr>
   <tr>
-    <td>Annual cost</td><td></td>
+    <td>Annual Cost</td><td></td>
   </tr>
   <tr class=th>
     <td>Summary</td><td></td>
   </tr>
   <tr class=sum>
-    <td>Savings potential</td>
+    <td>Savings Potential</td>
     <td></td>
   </tr>
   <tr class=sum>
-    <td>Optimization rating</td>
+    <td>Optimization Rating</td>
     <td></td>
   </tr>
 </table>
