--- a/headtool.html
+++ b/headtool.html
@@ -11,7 +11,7 @@
 		display: flex;
 		align-items: center;
 	}
-	td:not(:first-child),th:not(:first-child) {
+	td:last-child, th:last-child {
 		padding-left: 1.5rem;
 	}
 	table {
