--- a/headtool.html
+++ b/headtool.html
@@ -11,21 +11,15 @@
 		display: flex;
 		align-items: center;
 	}
-	td:last-child, th:last-child {
-		padding-left: 1.5rem;
+	strong {
+		padding-right: 1.5rem;
 	}
 	table {
 		border-collapse: collapse;
 	}
-	table input {
-		/*margin-bottom: .75rem;*/
-	}
 	th {
 		text-align: left;
-	}
-	#results {
-		/*vertical-align: bottom;*/
-	}
+	}	
 	#results td:first-child {
 		padding-right: 1rem;
 	}
