--- a/headtool.html
+++ b/headtool.html
@@ -21,7 +21,7 @@
 	th {
 		text-align: left;
 	}		
-	#results~ tr:not(:last-child) {
+	#results ~ :not(:last-child) {
 		background-color: #C3C8C8;
 	}
 	#result {
