--- a/grid.html
+++ b/grid.html
@@ -155,16 +155,7 @@
       <input name='head'>
       <button onclick='gotoHead(this)'><i class="fa fa-wrench"/></button>
     </td>
-  </tr>       
-  <!--<tr>
-    <td>Load estimate method</td>
-    <td> 
-      <select name='load_method'>
-        <option>Power</option>
-        <option>Current</option>
-      </select>
-    </td>
-  </tr>-->
+  </tr>         
   <tr>
     <td><div>Motor Power<em>(kW)</em></div></td>
     <td><input name='motor_field_power' onchange="clrFld('motor_field_current',this)"></td>
@@ -210,13 +201,13 @@
     <td><div>Motor Current <em>(amps)</em></div></td><td></td>
   </tr>
   <tr>
-    <td><div>Motor Power</div></td><td></td>
+    <td><div>Motor Power <em>(kW)</em></div></td><td></td>
   </tr>
   <tr>
     <td><div>Annual Energy <em>(MWh)</em></div></td><td></td>
   </tr>
   <tr>
-    <td>Annual Cost</td><td></td>
+    <td><div>Annual Cost <em>($)</em></div></td><td></td>
   </tr>
   <tr class=th>
     <td>Summary</td><td></td>
