--- a/grid.html
+++ b/grid.html
@@ -84,7 +84,7 @@
   </tr>
   <tr>
     <td>Fixed Specific Speed?</td>
-    <td><input name='speed' type=checkbox></td>
+    <td><input name='fixed_speed' type=checkbox></td>
   </tr>
   <tr>
     <td class='th'>Motor</td><td/>
