--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
             viscosity: 1,
             specific_gravity: 1,
             stages: 1,
-            speed: false,
+            fixed_speed: false,
             line: 1,
             motor_rated_power: 30,
             motor_rated_speed: 1780,
