--- a/grid.html
+++ b/grid.html
@@ -289,8 +289,7 @@
       Math.abs(nm(n,col).val()-v)>tol*v ? '#FECB00' : '');
   }
   function fla(a) {    
-    return Bridge.estFLA(a.motor_rated_power, a.motor_rated_speed,
-          a.motor_rated_voltage, a.efficiency_class,a.efficiency);
+    return Bridge.estFLA(a);
   }
   function estFLA(e) {
     nm('motor_rated_flc',col(e)).val(fla(colArgs(col(e))));
