--- a/grid.html
+++ b/grid.html
@@ -289,7 +289,7 @@
       Math.abs(nm(n,col).val()-v)>tol*v ? '#FECB00' : '');
   }
   function fla(a) {    
-    return Bridge.estFLA(a);
+    return rnd(Bridge.estFLA(a));
   }
   function estFLA(e) {
     nm('motor_rated_flc',col(e)).val(fla(colArgs(col(e))));
