--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
         if (reset) {
           DefCond = {
             pump_style: 5,
+            pump_specified: 0,
             pump_rated_speed: 1780,
             drive: 0,
             viscosity: 1,
