--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
   </head>
   <body> 
     <div id="banner">
-      <img src="logo_eere.png" style='padding-right:1rem'><span style='padding-left:1rem'>Pumping System Assessment Tool</span>
+      <img src="logo_eere.png" style='padding-right:1rem'>
+      <span style='padding-left:1rem;text-align:right'>Pumping System Assessment Tool</span>
     </div>
     <button id=back onclick='back()'><i class="fa fa-long-arrow-left fa-lg"></i></button>
     
