--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
           Units = IMP;
           Conds = [];
           HeadTool = {Ds:14,Dd:10,Ps:5,Pd:124,Ks:1,Kd:1};  
-          Curve = ["","","",""];
+          Curve = {C:1.9,plot:["","","",""]};
           save();        
         }
         Conds = loadProp('conditions');
