--- a/curve.html
+++ b/curve.html
@@ -30,7 +30,7 @@
 <div>
 	<h1>System Head Curve</h1>
 	System loss exponent<br>
-	<input size=10>	
+	<input id=C size=10>	
 	<div style='margin:1rem 0rem'>
 		Choose two points for <strong>head</strong> and <strong>flow</strong>:
 	</div>
@@ -166,10 +166,12 @@
 		if (ptsInp().filter((i,e)=>$.isNumeric($(e).val())).length==4) {
 			showHdBtn('show');
 		}
-		saveProp('curve',Curve = $.makeArray(ptsInp().map((i,v)=>$(v).val())));
+		Curve.C = pg('#C').val();
+		Curve.plot = $.makeArray(ptsInp().map((i,v)=>$(v).val()));
+		saveProp('curve',Curve);
 	}
 
-	ptsInp().change(inpChg);
+	pg('input').change(inpChg);
 	
 	function showUnit(txt,u) {
 		pg(`th:contains(${txt})`).append(em(unit(u)));
@@ -177,7 +179,8 @@
 	
 	showUnit('Flow',FLOW);
 	showUnit('Head',DIST);
-	Curve.forEach((v,i)=>ptsInp().eq(i).val(rnd(v)));
+	pg('#C').val(Curve.C);
+	Curve.plot.forEach((v,i)=>ptsInp().eq(i).val(rnd(v)));
 	inpChg();
 </script>
 
