--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       
       function main() {
         Nav = [];
-        go('conditions');
+        go('main');
       }
       function back() {
           Nav.pop();
